--- a/app/views/AccessDeniedView.scala.html
+++ b/app/views/AccessDeniedView.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import views.html.components._
+@import views.html.components.*
 @import config.FrontendAppConfig
 
 @this(
