DTR-3106 T21, AN1 and AP3 - content update

--- a/app/views/AmendPaymentPlanUpdateView.scala.html
+++ b/app/views/AmendPaymentPlanUpdateView.scala.html
@@ -71,6 +71,7 @@
             @paragraph("amendPaymentPlanUpdate.summary.p3")
             @paragraph("amendPaymentPlanUpdate.summary.p4")
             @paragraph("amendPaymentPlanUpdate.summary.p5")
+            @paragraph("amendPaymentPlanUpdate.summary.p6")
         </div>
     </details>
 
