--- a/app/views/PlanEndDateView.scala.html
+++ b/app/views/PlanEndDateView.scala.html
@@ -35,7 +35,7 @@
         @govukDateInput(
             DateViewModel(
                 field  = form("value"),
-                legend = LegendViewModel(messages("planEndDate.heading")).withCssClass("govuk-fieldset__legend--l")
+                legend = LegendViewModel(messages("planEndDate.heading")).asPageHeading().withCssClass("govuk-fieldset__legend--l")
                 ).withHint(
                 HintViewModel(
                     HtmlContent(
